[package]
name = "cs144_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.27.0", features = ["fs", "ioctl", "socket"] }
pcap = "1.2.0"
libc = "0.2.110"
socket2 = "0.5.5"
rand = "0.8.4"
mt19937 = "2.0.1"
thiserror = "1.0"
hex = "0.4.3"
